search div in landing finished

--- a/public/css/landing-new.css
+++ b/public/css/landing-new.css
@@ -1,7 +1,14 @@
-
+.intro-text{
+  text-align:center;
+  font-family: Alegreya;
+  font-weight: 600;
+  font-size: 3em;
+  margin-top: 150px;
+  color: #01426a;
+}
 #searchWrapper {
   position: relative;
-  margin: 120px auto;
+  margin: 40px auto;
   display: -webkit-box;
   display: -webkit-flex;
   display: -ms-flexbox;
@@ -9,25 +16,36 @@
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
   -webkit-flex-direction: column;
-      -ms-flex-direction: column;
-          flex-direction: column;
+  -ms-flex-direction: column;
+  flex-direction: column;
   -webkit-box-pack: center;
   -webkit-justify-content: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  padding: 24px;
-  width: 100%;
+  -ms-flex-pack: center;
+  justify-content: center;
+  width:60%;
   height: 100%;
-  max-width: 600px;
+  background: rgba(255,255,255,0.8);
+  border-radius: 15px;
+
+}
+#searchWrapper .info-header{
+  width: 100%;
+  height: 70px;
+  background: linear-gradient(50deg, #bd6772, #01426a);
+  border-top-left-radius: 15px;
+  border-top-right-radius: 15px;
+  color: #9b1d4a;
+  padding: 15px;
+  text-transform: uppercase;
 }
 
 #searchWrapper h1 {
-  font-size: 40px;
-  font-weight: 900;
-  color: #ffffff;
-  margin-bottom: 12px;
+  font-size: 30px;
+  font-weight: 700;
+  color: #fff;
+  margin-top: 5px;
+  margin-bottom: 10px;
 }
-
 #searchWrapper h2 {
   font-size: 22px;
   color: #ffffff;
@@ -35,7 +53,9 @@
 }
 
 #flight-datepicker {
-  margin-top: 36px;
+  margin-top: 30px;
+  margin-bottom: 20px;
+
 }
 @media screen and (min-width: 400px) {
   #flight-datepicker {
@@ -45,30 +65,28 @@
     display: flex;
   }
 }
-#flight-datepicker .form-item {
+#flight-datepicker .form-item,
+#route .form-item {
   position: relative;
-  margin: 12px 0 60px;
+  margin: 12px 24px 12px;
 }
-@media screen and (min-width: 400px) {
-  #flight-datepicker .form-item {
-    margin: 12px 24px 0 0;
-  }
-}
-#flight-datepicker label {
+
+#flight-datepicker label, #searchWrapper #route label, #searchWrapper .class label
+{
   display: block;
   margin-bottom: 8px;
-  color: white;
+  color: #01426a;
 }
-#flight-datepicker input {
+#flight-datepicker input,
+#searchWrapper #route input{
   display: block;
   margin-bottom: 8px;
   padding-bottom: 6px;
   width: 100%;
-  font-family: "Lato", sans-serif;
   font-size: 22px;
   font-weight: bold;
   text-align: left;
-  color: #0e3e43;
+  color: #6d6e70;
   background-color: transparent;
   border: none;
   border-bottom: 2px solid #ffffff;
@@ -77,38 +95,41 @@
   -webkit-transition: border-color .2s ease-out;
   transition: border-color .2s ease-out;
 }
-#flight-datepicker input:first-child, #flight-datepicker input:last-child {
+#flight-datepicker input:first-child, #flight-datepicker input:last-child,
+#route input:first-child, #route input:last-child {
   border-radius: 0;
 }
-#flight-datepicker input::-webkit-input-placeholder {
+#flight-datepicker input::-webkit-input-placeholder,
+#route input::-webkit-input-placeholder {
   color: #0e3e43;
-  font-size: 14px;
+  font-size: 20px;
   line-height: 30px;
   -webkit-transition: color .2s .2s ease-out;
   transition: color .2s .2s ease-out;
 }
 #flight-datepicker input:-moz-placeholder {
   color: #0e3e43;
-  font-size: 14px;
+  font-size: 20px;
   line-height: 30px;
   -webkit-transition: color .2s .2s ease-out;
   transition: color .2s .2s ease-out;
 }
 #flight-datepicker input::-moz-placeholder {
   color: #0e3e43;
-  font-size: 14px;
+  font-size: 20px;
   line-height: 30px;
   -webkit-transition: color .2s .2s ease-out;
   transition: color .2s .2s ease-out;
 }
 #flight-datepicker input:-ms-input-placeholder {
   color: #0e3e43;
-  font-size: 14px;
+  font-size: 20px;
   line-height: 30px;
   -webkit-transition: color .2s .2s ease-out;
   transition: color .2s .2s ease-out;
 }
-#flight-datepicker input:focus {
+#flight-datepicker input:focus,
+#route input:focus{
   border-bottom-color: #125259;
 }
 #flight-datepicker input:focus::-webkit-input-placeholder {
@@ -139,8 +160,8 @@
   left: 0;
   margin: auto;
   top: calc(100% + 6px);
-  font-size: 12px;
-  color: white;
+  font-size: 15px;
+  color: #6d6e70;
 }
 @media screen and (min-width: 400px) {
   #flight-datepicker .date-text {
@@ -154,13 +175,13 @@
   border: none;
   border-radius: 0;
   -webkit-animation: popup .2s ease-out forwards;
-          animation: popup .2s ease-out forwards;
+  animation: popup .2s ease-out forwards;
 }
 .datepicker.dropdown-menu table {
-  background-color: #1b7983;
+  background-color: #01426a;
 }
 .datepicker.dropdown-menu table thead {
-  background-color: #1b7983;
+  background-color: #01426a;
 }
 .datepicker.dropdown-menu table thead tr {
   border-top: 0;
@@ -192,13 +213,13 @@
   transition: background-color .2s ease-out;
 }
 .datepicker.dropdown-menu table tr td:focus, .datepicker.dropdown-menu table tr td.selected, .datepicker.dropdown-menu table tr th:focus, .datepicker.dropdown-menu table tr th.selected {
-  background-color: #24A0AD;
+  background-color: #4987a5;
   border-color: #ededed;
   border-radius: 0;
 }
 .datepicker.dropdown-menu table tr td.active, .datepicker.dropdown-menu table tr td.active:focus, .datepicker.dropdown-menu table tr td.active.active:hover, .datepicker.dropdown-menu table tr td:active:focus, .datepicker.dropdown-menu table tr td.highlighted, .datepicker.dropdown-menu table tr th.active, .datepicker.dropdown-menu table tr th.active:focus,
- .datepicker.dropdown-menu table tr th.active:hover, .datepicker.dropdown-menu table tr th:active:focus, .datepicker.dropdown-menu table tr th.highlighted {
-  background-color: #1b7983;
+.datepicker.dropdown-menu table tr th.active:hover, .datepicker.dropdown-menu table tr th:active:focus, .datepicker.dropdown-menu table tr th.highlighted {
+  background-color: #01426a;
   border-color: #ededed;
 }
 .datepicker.dropdown-menu table tr th.datepicker-switch {
@@ -214,7 +235,7 @@
 .datepicker.dropdown-menu table tr th.prev,
 .datepicker.dropdown-menu table tr th.next {
   color: #ffffff;
-  background-color: #17656e;
+  background-color: #01426a;
   border-radius: 0;
 }
 .datepicker.dropdown-menu table tr th.dow {
@@ -222,8 +243,7 @@
   font-size: 12px;
   line-height: 2;
   color: #ffffff;
-  background-color: #19717a;
-  border-top: 1px solid #196d76;
+  background: #bd6772;
   border-radius: 0;
 }
 .datepicker.dropdown-menu table tr td.day {
@@ -244,23 +264,29 @@
 }
 
 
-#searchWrapper .fa-calendar {
+#searchWrapper .fa-calendar,
+#searchWrapper .fa-location-arrow
+{
   position: absolute;
   top: 26px;
   right: 0;
   font-size: 24px;
 }
+#searchWrapper .fa-search{
 
+  margin-right: 6px;
+  font-size: 1em;
+}
 @-webkit-keyframes popup {
   from {
     opacity: 0;
     -webkit-transform: translateY(12px);
-            transform: translateY(12px);
+    transform: translateY(12px);
   }
   to {
     opacity: 1;
     -webkit-transform: translateY(0);
-            transform: translateY(0);
+    transform: translateY(0);
   }
 }
 
@@ -268,11 +294,125 @@
   from {
     opacity: 0;
     -webkit-transform: translateY(12px);
-            transform: translateY(12px);
+    transform: translateY(12px);
   }
   to {
     opacity: 1;
     -webkit-transform: translateY(0);
-            transform: translateY(0);
+    transform: translateY(0);
   }
+}
+#searchWrapper form{
+  padding: 20px;
+  position: relative;
+}
+#searchWrapper .direction ~ label:before {
+  font-family: FontAwesome;
+  content: "\f096";
+  letter-spacing: 10px;
+  font-size: 1.2em;
+  color: #01426a;
+  width: 1.4em;
+}
+
+#searchWrapper .direction:checked ~ label:before {
+  content: "\f14a";
+  font-size: 1.2em;
+  color: #4987a5;
+  letter-spacing: 5px;
+}
+#searchWrapper .direction:focus ~ label:before,
+#searchWrapper .direction:focus ~ label
+{
+  color: #4987a5;
+}
+#searchWrapper .direction
+{
+  border: 0;
+  clip: rect(0 0 0 0);
+  height: 1px;
+  margin: -1px;
+  overflow: hidden;
+  padding: 0;
+  width: 1px;
+  position: absolute;
+}
+#searchWrapper #search{
+  color: white;
+  text-decoration: none;
+  padding: 15px 15px;
+  border-radius: 10px;
+  background: #01426a;
+  width: 150px;
+  text-transform: uppercase;
+  font-weight: bold;
+  font-size: 1.5em;
+  border: none;
+  box-shadow: none;
+  float: right;
+  margin-top: 5px;
+  margin-right: 15px;
+  vertical-align: middle;
+}
+
+#searchWrapper .input-direction{
+  margin: 10px;
+}
+#route{
+  display: inline-flex;
+}
+#searchWrapper fieldset.class {
+  border: none;
+  padding: 10px 15px;
+  position: relative;
+}
+#searchWrapper fieldset.class .select {
+  position: relative;
+  background: rgba(255, 255, 255, 0.7);
+}
+#searchWrapper fieldset.class .select::after {
+  content: '';
+  border-top: 8px solid #222;
+  border-left: 4px solid transparent;
+  border-right: 4px solid transparent;
+  position: absolute;
+  z-index: 2;
+  top: 14px;
+  right: 10px;
+  pointer-events: none;
+}
+#searchWrapper fieldset.class .select select {
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+  position: absolute;
+  padding-left: 10px;
+  border: none;
+  width: 100%;
+  outline: none !important;
+  top: 6px;
+  left: 6px;
+  background: none;
+
+}
+#searchWrapper fieldset.class .select select :-moz-focusring {
+  color: transparent;
+  text-shadow: 0 0 0 #000;
+}
+#searchWrapper fieldset.class .select {
+  width: 100%;
+  height: 38px;
+  color: #333333;
+  padding: 10px;
+  border-radius: 5px;
+  font-size: 1em;
+  outline: none;
+  border: 1px solid rgba(0, 0, 0, 0.2);
+  box-shadow: inset 0 1px 4px rgba(0, 0, 0, 0.2);
+}
+#searchWrapper #select-type {
+  width:20%;
+}
+#searchWrapper .checks{
+  display: inline-flex;
 }
