--- a/public/views/landing-new.html
+++ b/public/views/landing-new.html
@@ -1,25 +1,69 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.6.0/css/bootstrap-datepicker3.standalone.css">
 <link rel="stylesheet" href="css/landing-new.css">
-
+<div class="intro-text">
+</div>
 <div id="searchWrapper">
-  <h1><i class="fa fa-plane" aria-hidden="true"></i> Moon Flights</h1>
-  <h2>Select your flight dates below</h2>
-  <div id="flight-datepicker" class="input-daterange input-group">
-    <div class="form-item">
-      <label>Depart on</label>
-      <input type="text" id="start-date" name="start" placeholder="Select depart date" data-date-format="DD, MM d" class="input-sm form-control"/>
-      <i class="fa fa-calendar" aria-hidden="true"></i>
-      <span class="date-text date-depart"></span>
-    </div>
-    <div class="form-item">
-      <label>Return on</label>
-      <input type="text" id="end-date" name="end" placeholder="Select return date" data-date-format="DD, MM d" class="input-sm form-control"/>
-      <i class="fa fa-calendar" aria-hidden="true"></i>
-      <span class="date-text date-return"></span>
-
-    </div>
+  <div class="info-header container-fluid">
+    <h1><i class="fa fa-plane" aria-hidden="true"></i>  Fly me!</h1>
   </div>
+  <form class="form" autocomplete="off" novalidate>
+    <div class="form-item checks">
+      <fieldset class="input-direction">
+        <input type="checkbox" class="direction" id="direction" name="direction"/>
+        <label for="direction">ONE-WAY</label>
+      </fieldset>
+      <fieldset class="input-direction">
+        <input type="checkbox" class="direction" id="otherAirlines" name="otherAirlines"/>
+        <label for="otherAirlines">OTHER AIRLINES</label>
+      </fieldset>
+    </div>
+    <div id="route" class="input-group">
+      <div class="form-item">
+        <label>From</label>
+        <input type="text" id="origin" name="origin" placeholder="Select origin" ng-model="form.fromCountry" typeahead="airport.iata as  airport.iata for airport in airports | filter:notNull" class="input-sm form-control"/>
+        <i class="fa fa-location-arrow" aria-hidden="true"></i>
+      </div>
+      <div class="form-item">
+        <label>To</label>
+        <input type="text" id="destination" name="destination" placeholder="Select destination" class="input-sm form-control" ng-model="form.toCountry" typeahead="airport.iata as  airport.iata for airport in airports | filter:notNull"/>
+        <i class="fa fa-location-arrow" aria-hidden="true"></i>
+      </div>
+    </div>
+
+    <div id="flight-datepicker" class="input-daterange input-group">
+      <div class="form-item">
+        <label>Depart on</label>
+        <input type="text" id="start-date" name="start" placeholder="Select depart date" data-date-format="DD, MM d" class="input-sm form-control"/>
+        <i class="fa fa-calendar" aria-hidden="true"></i>
+        <span class="date-text date-depart"></span>
+      </div>
+      <div class="form-item">
+        <label>Return on</label>
+        <input type="text" id="end-date" name="end" placeholder="Select return date" data-date-format="DD, MM d" class="input-sm form-control"/>
+        <i class="fa fa-calendar" aria-hidden="true"></i>
+        <span class="date-text date-return"></span>
+      </div>
+    </div>
+    <fieldset class="class">
+      <div class="select" id="select-type">
+        <select id="class">
+          <option>Economy</option>
+          <option>Business</option>
+        </select>
+      </div>
+    </fieldset>
+    <button id="search" class = "hvr-pulse"><i class="fa fa-search" id="searchIcon" aria-hidden="true"></i>SEARCH</button>
+  </form>
 </div>
 <script src="js/bootstrap-datepicker.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-dateFormat/1.0/jquery.dateFormat.js"></script>
 <script src="js/datePicker.js"></script>
+<script src="js/typed.js"></script>
+<script>
+$(function(){
+  $(".intro-text").typed({
+    strings: ["Welcome!", "Ready to book on Alaska Airlines?"],
+    typeSpeed: 0
+  });
+});
+</script>
