--- a/public/views/flights-new.html
+++ b/public/views/flights-new.html
@@ -113,7 +113,7 @@
               <td>$120</td>
               </tbody>
             </table>
-            <a class="checkout hvr-pulse" href="">Checkout</a>
+            <a class="checkout hvr-pulse" href="" ng-click="Continue()">Checkout</a>
           </div>
         </div>
         <script src="js/cart-scroll.js">
