--- a/public/views/passenger-info.html
+++ b/public/views/passenger-info.html
@@ -601,7 +601,7 @@
           </select>
         </div>
       </fieldset>
-      <button class="continue">continue</button>
+      <button class="continue hvr-pulse" ng-click="SubmitInfo()">continue</button>
     </form>
   </div>
 </div>
