--- a/public/views/payment-new.html
+++ b/public/views/payment-new.html
@@ -83,7 +83,7 @@
       <label for="card-ccv">CCV</label>
       <input type="text" id="card-ccv" maxlength="3" />
     </fieldset>
-    <button class="confirm"><i class="fa fa-lock"></i> confirm</button>
+    <button class="confirm hvr-pulse" ng-click="SubmitPayment()"><i class="fa fa-lock"></i> confirm</button>
   </form>
 </div>
 <link href="css/payment.css" rel="stylesheet">
