--- a/public/views/booking.html
+++ b/public/views/booking.html
@@ -1,6 +1,6 @@
 
 <link href='https://fonts.googleapis.com/css?family=Homemade+Apple' rel='stylesheet' type='text/css'>
-<link href="css/resv-show.css" rel="stylesheet">
+<link href="css/booking.css" rel="stylesheet">
 
 
 <div class="wrapper">
