flights view: angular added

--- a/public/views/flights.html
+++ b/public/views/flights.html
@@ -15,7 +15,7 @@
             <td>{{outFlight.flightNumber}}</td>
             <td>{{outFlight.availableSeats}}</td>
             <td>
-              <p ><input type="radio" name="outFlight" ng-model="infoFlightNo.index" ng-value="{{$index}}" ng-disabled="outFlight.availableSeats==0" <br></p>
+              <p ><input type="radio" name="outFlight" ng-model="selectedOutgoing.index" ng-value="{{$index}}"<br></p>
             </td>
           </tr>
         </table>
