--- a/public/views/booking.html
+++ b/public/views/booking.html
@@ -11,14 +11,14 @@
       <div class="diagram"><img src="http://s18.postimg.org/d8yqxdkjt/c_Gjlath.png"/></div>
       <div class="half">
         <div class="circle">
-          <span class="airport">LHR</span>
-          <span class="city">London</span>
+          <span class="airport">{{booking.outgoingFlight.origin}}</span>
+          <span class="city">{{getAirportName(booking.outgoingFlight.origin)}}</span>
         </div>
       </div><!--
       --><div class="half">
       <div class="circle">
-        <span class="airport">BKK</span>
-        <span class="city">Bangkok</span>
+        <span class="airport">{{booking.outgoingFlight.destination}}</span>
+        <span class="city">{{getAirportName(booking.outgoingFlight.destination)}}</span>
       </div>
     </div>
   </div>
@@ -26,25 +26,31 @@
   <div class="flight-details">
     <div class="bookingRef">
       <span class="title title-b">Booking Ref. </span>
-      <span class="title">m1g2</span>
+      <span class="title">{{booking.bookingReference}}</span>
     </div>
     <div class="depart">
       <span class="title">Outbound</span>
       <div class="half">
         <span class="way">Departing</span>
-        Friday 6th May 2016 &mdash; 17:35 </div><!--
-        --><div class="half">
-        <span class="way">Arriving</span>Friday 7th May 2016 &mdash; 08:19
+        {{booking.outgoingFlight.departureDateTime | date:"MM/dd/yyyy 'at' h:mma"}}
+      </div><!--
+      -->
+      <div class="half">
+        <span class="way">Arriving</span>
+        {{booking.outgoingFlight.arrivalDateTime | date:"MM/dd/yyyy 'at' h:mma"}}
       </div>
     </div>
 
-    <div class="return">
+    <div class="return" ng-hide="booking.oneWay">
       <span class="title">Return</span>
       <div class="half">
         <span class="way">Departing</span>
-        Friday 6th May 2016 &mdash; 17:35 </div><!--
-        --><div class="half">
-        <span class="way">Arriving</span>Friday 7th May 2016 &mdash; 08:19
+        {{booking.returnFlight.departureDateTime | date:"MM/dd/yyyy 'at' h:mma"}}
+      </div><!--
+      -->
+      <div class="half">
+        <span class="way">Arriving</span>
+        {{booking.returnFlight.arrivalDateTime | date:"MM/dd/yyyy 'at' h:mma"}}
       </div>
     </div>
   </div>
@@ -53,18 +59,18 @@
   <div class="booking">
     <div class="tickets">
       <div class="ticket">
-        <span class="name">Mandy Smith</span>
+        <span class="name">{{booking.passenger.firstName}} {{booking.passenger.lastName}}</span>
         <span class="direction">outgoing</span>
-        <span class="seat">14B</span>
-        <span class="cost">$120</span>
-        <span class="class">Economy</span>
+        <span class="seat">{{booking.seatNumber}}</span>
+        <span class="cost">${{booking.outgoingFlight.cost}}</span>
+        <span class="class">{{booking.outgoingFlight.class}}</span>
       </div>
-      <div class="ticket">
-        <span class="name">Mandy Smith</span>
-        <span class="direction">return</span>
-        <span class="seat">20A</span>
-        <span class="cost">$200</span>
-        <span class="class">Economy</span>
+      <div ng-hide="booking.oneWay" class="ticket">
+        <span class="name">{{booking.passenger.firstName}} {{booking.passenger.lastName}}</span>
+        <span class="direction">outgoing</span>
+        <span class="seat">{{booking.seatNumber}}</span>
+        <span class="cost">${{booking.outgoingFlight.cost}}</span>
+        <span class="class">{{booking.outgoingFlight.class}}</span>
       </div>
     </div>
 
@@ -74,10 +80,10 @@
           <div class="front">
             <img class="chip" src="https://www.bethpagefcu.com/~/media/Images/bethpage/Page-Content/CC_chip.ashx?la=en">
             <span class="payment-title">Payment Details</span>
-            <div class="field" id="number">Card Number</div>
-            <div class="field" id="name"> First Last </div>
-            <div class="field" id="date"> Expiry</div>
-            <div class="field" id="total"> Total</div>
+            <div class="field" id="number">{{booking.payment.cardNo}}</div>
+            <div class="field" id="name"> {{booking.payment.cardHolder}}</div>
+            <div class="field" id="date"> {{booking.payment.expiryDate}}</div>
+            <div class="field" id="total"> {{booking.payment.amount}}</div>
           </div>
         </div>
       </div>
