--- a/public/views/payment-new.html
+++ b/public/views/payment-new.html
@@ -26,62 +26,62 @@
     <fieldset>
       <label for="card-type">Card Type</label>
       <div class="select" id="select-type">
-        <select id="card-type">
+        <select id="card-type" ng-model="cardType">
           <option></option>
-          <option>Visa</option>
-          <option>MasterCard</option>
+          <option ng-value="Visa">Visa</option>
+          <option ng-value="MasterCard">MasterCard</option>
         </select>
       </div>
     </fieldset>
     <fieldset>
       <label for="card-number">Card Number</label>
-      <input type="num" id="card-number" class="input-cart-number" maxlength="4" />
-      <input type="num" id="card-number-1" class="input-cart-number" maxlength="4" />
-      <input type="num" id="card-number-2" class="input-cart-number" maxlength="4" />
-      <input type="num" id="card-number-3" class="input-cart-number" maxlength="4" />
+      <input type="num" ng-model="cardNo1" id="card-number" class="input-cart-number" maxlength="4" />
+      <input type="num" ng-model="cardNo2" id="card-number-1" class="input-cart-number" maxlength="4" />
+      <input type="num" ng-model="cardNo3" id="card-number-2" class="input-cart-number" maxlength="4" />
+      <input type="num" ng-model="cardNo4" id="card-number-3" class="input-cart-number" maxlength="4" />
     </fieldset>
     <fieldset>
       <label for="card-holder">Card holder</label>
-      <input type="text" id="card-holder" />
+      <input type="text" id="card-holder" ng-model="cardHolder" />
     </fieldset>
     <fieldset class="fieldset-expiration">
       <label for="card-expiration-month">Expiration date</label>
       <div class="select">
-        <select id="card-expiration-month">
+        <select id="card-expiration-month" ng-model="expiryMonth">
           <option></option>
-          <option>01</option>
-          <option>02</option>
-          <option>03</option>
-          <option>04</option>
-          <option>05</option>
-          <option>06</option>
-          <option>07</option>
-          <option>08</option>
-          <option>09</option>
-          <option>10</option>
-          <option>11</option>
-          <option>12</option>
+          <option ng-value="01">01</option>
+          <option ng-value="02">02</option>
+          <option ng-value="03">03</option>
+          <option ng-value="04">04</option>
+          <option ng-value="05">05</option>
+          <option ng-value="06">06</option>
+          <option ng-value="07">07</option>
+          <option ng-value="08">08</option>
+          <option ng-value="09">09</option>
+          <option ng-value="10">10</option>
+          <option ng-value="11">11</option>
+          <option ng-value="12">12</option>
         </select>
       </div>
       <div class="select">
-        <select id="card-expiration-year">
+        <select id="card-expiration-year" ng-model="expiryYear">
           <option></option>
-          <option>2016</option>
-          <option>2017</option>
-          <option>2018</option>
-          <option>2019</option>
-          <option>2020</option>
-          <option>2021</option>
-          <option>2022</option>
-          <option>2023</option>
-          <option>2024</option>
-          <option>2025</option>
+          <option ng-value="2016">2016</option>
+          <option ng-value="2017">2017</option>
+          <option ng-value="2018">2018</option>
+          <option ng-value="2019">2019</option>
+          <option ng-value="2020">2020</option>
+          <option ng-value="2021">2021</option>
+          <option ng-value="2022">2022</option>
+          <option ng-value="2023">2023</option>
+          <option ng-value="2024">2024</option>
+          <option ng-value="2025">2025</option>
         </select>
       </div>
     </fieldset>
     <fieldset class="fieldset-ccv">
       <label for="card-ccv">CCV</label>
-      <input type="text" id="card-ccv" maxlength="3" />
+      <input type="text" id="card-ccv" maxlength="3" ng-model="ccv" />
     </fieldset>
     <button class="confirm hvr-pulse" ng-click="SubmitPayment()"><i class="fa fa-lock"></i> confirm</button>
   </form>
