added ng-value to economy and business classes

--- a/public/views/landing-new.html
+++ b/public/views/landing-new.html
@@ -48,8 +48,8 @@
       <label>Class</label>
       <div class="select" id="select-type">
         <select id="class" ng-model="class">
-          <option>Economy</option>
-          <option>Business</option>
+          <option ng-value="economy">Economy</option>
+          <option ng-value="business">Business</option>
         </select>
       </div>
     </fieldset>
