--- a/public/views/flight-status.html
+++ b/public/views/flight-status.html
@@ -1,22 +1,22 @@
 <link rel="stylesheet" href="css/flight-status.css">
 <div id="statusContainer">
   <div class="info-header container-fluid">
-    <h2> CAI - BER</h2>
+    <h2> {{flight.origin}} - {{flight.destination}}</h2>
   </div>
   <div class="flightNo">
-    <h2> M1720 </h2>
+    <h2> {{flight.flightNumber}} </h2>
     <div class="line"></div>
   </div>
   <div class="status">
-    <h1>departed</h1>
+    <h1>{{status}}</h1>
   </div>
-  <div  ng-show="true" class="statusIcon">
+  <div  ng-show="status=='departed'" class="statusIcon">
     <i class="material-icons">flight_takeoff</i>
   </div>
-  <div  ng-show="false"  class="statusIcon">
+  <div  ng-show="status==='landed'"  class="statusIcon">
     <i class="material-icons">flight_land</i>
   </div>
-  <div  ng-show="false"  class="statusIcon">
+  <div  ng-show="status==='scheduled'"  class="statusIcon">
     <i class="material-icons">event</i>
   </div>
   <div class="button-wrapper">
@@ -29,15 +29,15 @@
   <div class="layered-content">
     <button class="close-button fa fa-times"></button>
     <div class="content">
-      <h2>M1720</h2>
+      <h2>{{flight.flightNumber}}</h2>
       <div class="airports">
-        Cairo International Airport
+        {{getAirportName(flight.origin)}}
         <i class="material-icons">keyboard_arrow_right</i>
-        Berlin International Airport
+        {{getAirportName(flight.destination)}}
       </div>
-      <h3>01/10 8:00 - 01/10 10:00</h3>
+      <h3>  {{flight.departureDateTime | date:"MM/dd/yyyy 'at' h:mma"}} - {{flight.arrivalDateTime | date:"MM/dd/yyyy 'at' h:mma"}}</h3>
       <div class="airplane">
-        <h3>Aircraft 1234</h3>
+        <h3>{{flight.aircraftType}} {{flight.aircraftModel}}</h3>
       </div>
     </div>
   </div>
