fixed missing ng-hide in flights html

--- a/public/views/flights-new.html
+++ b/public/views/flights-new.html
@@ -44,7 +44,7 @@
       </tbody>
     </table>
   </div>
-  <div class="returnFlights">
+  <div class="returnFlights" ng-hide="oneWay">
     <div class="info-header container-fluid">
       <h3><i class="material-icons">fast_rewind</i>
         {{destination}} - {{origin}}
