angular issues fixed + some db & api issues

--- a/public/views/flight-status.html
+++ b/public/views/flight-status.html
@@ -10,7 +10,7 @@
   <div class="status">
     <h1>{{status}}</h1>
   </div>
-  <div  ng-show="status=='departed'" class="statusIcon">
+  <div  ng-show="status==='departed'" class="statusIcon">
     <i class="material-icons">flight_takeoff</i>
   </div>
   <div  ng-show="status==='landed'"  class="statusIcon">
