--- a/public/views/flights-new.html
+++ b/public/views/flights-new.html
@@ -13,8 +13,8 @@
       <thead>
         <tr>
           <th>Flight</th>
-          <th ng-show="seatClass=='economy'">Economy</th>
-          <th ng-show="seatClass=='business'">Business</th>
+          <th ng-show="seatClass==='economy'">Economy</th>
+          <th ng-show="seatClass==='business'">Business</th>
           <th ng-show="otherAirlines===1">Airline</th>
         </tr>
       </thead>
