--- a/public/views/flights-new.html
+++ b/public/views/flights-new.html
@@ -33,7 +33,7 @@
           </td>
           <td>
             <fieldset >
-              <input type="radio" class="class" id="outgoingCost" name="outgoingCost" ng-model="selectedOutgoingIndex" ng-value="{{$index}}"/>
+              <input type="radio" class="class" id="outgoingCost" name="outgoingCost" ng-model="$parent.selectedOutgoing" ng-value="{{outgoingFlight}}"/>
               <label for="outgoingCost">{{outgoingFlight.cost}} {{outgoingFlight.currency}}</label>
             </fieldset>
           </td>
@@ -75,7 +75,7 @@
           </td>
           <td>
             <fieldset >
-              <input type="radio" class="class" id="returnCost" name="returnCost" ng-model="selectedReturnIndex" ng-value="{{$index}}"/>
+              <input type="radio" class="class"  id="returnCost" name="returnCost" ng-model="$parent.selectedReturn" ng-value="{{returnFlight}}"/>
               <label for="returnCost">{{returnFlight.cost}} {{returnFlight.currency}}</label>
             </fieldset>
           </td>
@@ -91,8 +91,8 @@
 
   <div class="plan">
     <h3>Shopping Cart
-      <span ng-hide="oneWay">${{selectedOutgoing.cost+selectedReturn.cost}}</span>
-      <span ng-show="oneWay">${{selectedOutgoing.cost}}</span>
+      <span ng-hide="oneWay">{{selectedOutgoing.cost + selectedReturn.cost | currency}}</span>
+      <span ng-show="oneWay">{{selectedOutgoing.cost | currency}}</span>
     </h3>
     <table class="table table-hover">
       <tbody>
