--- a/public/css/flights.css
+++ b/public/css/flights.css
@@ -128,7 +128,7 @@
   border-radius: 5px;
   height: 100%;
   display: block;
-  font-size: 0.5em;
+  font-size: 12px;
 }
 
 
@@ -154,7 +154,7 @@
 
 #pricing-table h3 span {
   display: block;
-  font: bold 25px/100px Georgia, Serif;
+  font-size: 15px;
   color: #777;
   background: #fff;
   border: 5px solid #fff;
