--- a/public/css/flights.css
+++ b/public/css/flights.css
@@ -154,7 +154,7 @@
 
 #pricing-table h3 span {
   display: block;
-  font-size: 15px;
+  font: bold 25px/100px Georgia, Serif;
   color: #777;
   background: #fff;
   border: 5px solid #fff;
