seat issue FIXED

--- a/public/views/booking.html
+++ b/public/views/booking.html
@@ -67,7 +67,7 @@
       </div>
       <div ng-hide="booking.oneWay" class="ticket">
         <span class="name">{{booking.passenger.firstName}} {{booking.passenger.lastName}}</span>
-        <span class="direction">outgoing</span>
+        <span class="direction">return</span>
         <span class="seat">{{booking.returnFlight.seatNumber}}</span>
         <span class="cost">${{booking.returnFlight.cost}}</span>
         <span class="class">{{booking.returnFlight.class}}</span>
