--- a/public/views/payment-new.html
+++ b/public/views/payment-new.html
@@ -28,8 +28,8 @@
       <div class="select" id="select-type">
         <select id="card-type" ng-model="cardType">
           <option></option>
-          <option ng-value="Visa">Visa</option>
-          <option ng-value="MasterCard">MasterCard</option>
+          <option value="Visa">Visa</option>
+          <option value="MasterCard">MasterCard</option>
         </select>
       </div>
     </fieldset>
@@ -49,33 +49,33 @@
       <div class="select">
         <select id="card-expiration-month" ng-model="expiryMonth">
           <option></option>
-          <option ng-value="01">01</option>
-          <option ng-value="02">02</option>
-          <option ng-value="03">03</option>
-          <option ng-value="04">04</option>
-          <option ng-value="05">05</option>
-          <option ng-value="06">06</option>
-          <option ng-value="07">07</option>
-          <option ng-value="08">08</option>
-          <option ng-value="09">09</option>
-          <option ng-value="10">10</option>
-          <option ng-value="11">11</option>
-          <option ng-value="12">12</option>
+          <option value="01">01</option>
+          <option value="02">02</option>
+          <option value="03">03</option>
+          <option value="04">04</option>
+          <option value="05">05</option>
+          <option value="06">06</option>
+          <option value="07">07</option>
+          <option value="08">08</option>
+          <option value="09">09</option>
+          <option value="10">10</option>
+          <option value="11">11</option>
+          <option value="12">12</option>
         </select>
       </div>
       <div class="select">
         <select id="card-expiration-year" ng-model="expiryYear">
           <option></option>
-          <option ng-value="2016">2016</option>
-          <option ng-value="2017">2017</option>
-          <option ng-value="2018">2018</option>
-          <option ng-value="2019">2019</option>
-          <option ng-value="2020">2020</option>
-          <option ng-value="2021">2021</option>
-          <option ng-value="2022">2022</option>
-          <option ng-value="2023">2023</option>
-          <option ng-value="2024">2024</option>
-          <option ng-value="2025">2025</option>
+          <option value="2016">2016</option>
+          <option value="2017">2017</option>
+          <option value="2018">2018</option>
+          <option value="2019">2019</option>
+          <option value="2020">2020</option>
+          <option value="2021">2021</option>
+          <option value="2022">2022</option>
+          <option value="2023">2023</option>
+          <option value="2024">2024</option>
+          <option value="2025">2025</option>
         </select>
       </div>
     </fieldset>
