--- a/www/partials/findFlights.html
+++ b/www/partials/findFlights.html
@@ -2,32 +2,38 @@
     <ion-content padding="true" class="manual-ios-statusbar-padding">
         <form class="list">
             <div class="spacer" style="width: 300px; height: 13px;"></div>
-            <ion-toggle toggle-class="">Search other Airlines</ion-toggle>
-            <ion-toggle toggle-class="">One Way</ion-toggle>
-            <label class="item item-input">
-                <span class="input-label">To</span>
-                <input type="text" placeholder="">
-            </label>
+           
+            <ion-toggle toggle-class="" id="otherAirlines" name="otherAirlines" ng-model="otherAirlines" ng-true-value="1" ng-false-value="0" >Search other Airlines</ion-toggle>
+
+            <ion-toggle toggle-class="" id="direction" name="direction"ng-model="oneWay" ng-true-value="1" ng-false-value="0">One Way</ion-toggle>
+
             <label class="item item-input">
                 <span class="input-label">From</span>
-                <input type="text" placeholder="">
+                <input type="text"  id="origin" name="origin" placeholder="Select origin" ng-model="origin" uib-typeahead="airport.iata as airport.iata for airport in airports| filter:{'iata':$viewValue} | filter:notNull | limitTo:5">
             </label>
+
+            <label class="item item-input">
+                <span class="input-label">To</span>
+                <input type="text" id="destination" name="destination" placeholder="Select destination"  ng-model="destination" uib-typeahead="airport.iata as airport.iata for airport in airports | filter:{'iata':$viewValue} | filter:notNull | limitTo:5">
+            </label>
+
             <label class="item item-input">
                 <span class="input-label">Depart Date</span>
-                <input type="date" placeholder="">
+                <input type="date" placeholder="" id="start-date" name="start" ng-model="departingDate">
             </label>
-            <label class="item item-input">
+
+            <label class="item item-input" ng-hide="oneWay">
                 <span class="input-label">Return Date</span>
-                <input type="date" placeholder="">
+                <input type="date" placeholder="" id="end-date" name="end" ng-model="returningDate">
             </label>
             <label class="item item-select">
                 <span class="input-label">Class</span>
-                <select>
+                <select id="class" ng-model="class">
                     <option>Economy</option>
                     <option>Business</option>
                 </select>
             </label>
-            <button id="findFlights-button1" style="border-radius:-1px -1px -1px -1px;" class="button button-calm  button-block icon ion-android-plane">Find Flights</button>
+            <button id="findFlights-button1" style="border-radius:-1px -1px -1px -1px;" class="button button-calm  button-block icon ion-android-plane" type="button" ng-click="findFlights()">Find Flights</button>
         </form>
     </ion-content>
 </ion-view>
