--- a/www/partials/findFlights.html
+++ b/www/partials/findFlights.html
@@ -1,11 +1,11 @@
-<ion-view title="Find Flights" hide-nav-bar="true" id="findFlights" hide-back-button="true">
+<ion-view view-title="Find Flights" hide-nav-bar="true" id="findFlights" hide-back-button="true">
     <ion-content padding="true" class="manual-ios-statusbar-padding">
         <form class="list">
             <div class="spacer" style="width: 300px; height: 13px;"></div>
-           
-            <ion-toggle toggle-class="" id="otherAirlines" name="otherAirlines" ng-model="otherAirlines" ng-true-value="1" ng-false-value="0" >Search other Airlines</ion-toggle>
 
-            <ion-toggle toggle-class="" id="direction" name="direction"ng-model="oneWay" ng-true-value="1" ng-false-value="0">One Way</ion-toggle>
+            <ion-toggle toggle-class="toggle-calm" id="otherAirlines" name="otherAirlines" ng-model="otherAirlines" ng-true-value="1" ng-false-value="0" >Search other Airlines</ion-toggle>
+
+            <ion-toggle toggle-class="toggle-calm" id="direction" name="direction" ng-model="oneWay"  ng-true-value="1" ng-false-value="0" >One Way</ion-toggle>
 
             <label class="item item-input">
                 <span class="input-label">From</span>
@@ -26,6 +26,7 @@
                 <span class="input-label">Return Date</span>
                 <input type="date" placeholder="" id="end-date" name="end" ng-model="returningDate">
             </label>
+            
             <label class="item item-select">
                 <span class="input-label">Class</span>
                 <select id="class" ng-model="class">
@@ -33,7 +34,8 @@
                     <option>Business</option>
                 </select>
             </label>
-            <button id="findFlights-button1" style="border-radius:-1px -1px -1px -1px;" class="button button-calm  button-block icon ion-android-plane" type="button" ng-click="findFlights()">Find Flights</button>
+            <ion-item id="findFlights-button1" style="border-radius:-1px -1px -1px -1px;" class="button button-calm  button-block icon ion-android-plane" type="button" ng-click="findFlights()">Find Flights</ion-item>
+
         </form>
     </ion-content>
 </ion-view>
